--- a/generator/src/main/resources/application.yml
+++ b/generator/src/main/resources/application.yml
@@ -24,7 +24,7 @@ spring:
     password: root
     # 使用druid数据源
     type: com.alibaba.druid.pool.DruidDataSource
-    driver-class-name: com.mysql.jdbc.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
     tomcat:
       max-active: 20
       initial-size: 1
@@ -39,27 +39,32 @@ spring:
     dbcp2:
       pool-prepared-statements: true
       max-open-prepared-statements: 20
+  jpa:
+    database-platform:
+    show-sql: true
   servlet:
     multipart:
       max-file-size: 100MB
       max-request-size: 100MB
 
-management:
-  server:
-    port: 8081
-  endpoints:
-    jmx:
-      exposure:
-        include: *
-    web:
-      exposure:
-        include: *
-  endpoint:
-    health:
-      show-details: always
+#management:
+#  server:
+#    port: 8081
+#  endpoints:
+#    jmx:
+#      exposure:
+#        include: *
+#    web:
+#      exposure:
+#        include: *
+#  endpoint:
+#    health:
+#      show-details: always
 
 mybatis:
   #模型所在的保命
   type-aliases-package: com.test.generator.dao
   #映射文件路径
   mapper-locations: classpath:mapper/*Mapper.xml
+
+
